main to dev (#264)
* Rename migration file for latitude and longitude

* Modify API and WebSocket base URLs in production env

Updated API base URL and added WebSocket base URL.

* Deploy in main din dev (#262)

* Feature/alex nechita (#258)

* Fix RAG/OCR pipeline: receipt items, vector store sync, SQL JOINs

- Save parsed receipt items to expense_items table in OcrController
- Add getExpenseItems tool to ExpenseTools for product queries
- Update LLM prompt to instruct using getExpenseItems for receipt products
- Fix ChartQueryExecutor to use JOINs instead of direct category/location columns
- Fix QdrantVectorService existsInVectorStore by renaming id to expense_id
- Add raw_input to ExpenseAnalyticsService BASE_SQL for OCR text retrieval
- Update ReceiptParser normalizeDate to return null on failure instead of today
- Set default OCR language to ron+eng
- Simplify LlmRouterService to route directly without redundant classification

* fix(sonar): resolve SonarQube issues in AI/RAG/LLM/OCR modules

- QdrantContentRetriever: replace regex replaceAll with while-loop stripLeadingQuotes/stripTrailingQuotes to fix DoS hotspot
- ReceiptParser: make ParsedReceipt and ReceiptItem fields private with getters/setters; add comment to empty catch block
- OcrService: return expression directly without temp variable
- ExpenseSyncListener: replace TODO comment with descriptive non-TODO comment
- CloudinaryService: replace generic RuntimeException with ExternalServiceException
- AgentChatService: split stripMarkdown and cleanQueryForRag into smaller private helpers to reduce cognitive complexity
- ChartQueryExecutor: extract COL_PERSON, COL_CATEGORY, COL_LOCATION, COL_MONTH, COL_YEAR constants
- ExpenseAnalyticsService: use KEY_CATEGORY and KEY_PERSON constants instead of literals
- ExpenseTools: extract SUFFIX_RON constant for repeated ' RON' literal
- OcrController: refactor processReceipt into smaller methods; replace 9-param constructor with @RequiredArgsConstructor
- Add/updat